argocd/dex-k8s-authenticator.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dex-k8s-authenticator
  namespace: dex
spec:
  type: ClusterIP
  ports:
    - port: 5555
      targetPort: http
      name: http
  selector:
    app: dex-k8s-authenticator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-k8s-authenticator
  namespace: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex-k8s-authenticator
  template:
    metadata:
      labels:
        app: dex-k8s-authenticator
    spec:
      containers:
        - name: dex-k8s-authenticator
          image: mintel/dex-k8s-authenticator
          imagePullPolicy: IfNotPresent
          ports:
          - name: http
            containerPort: 5555
            protocol: TCP
          args: [ "--config", "config.yaml" ]
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: http
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: http
          volumeMounts:
            - name: config
              subPath: config.yaml
              mountPath: /app/config.yaml
            - name: tls-key
              mountPath: /etc/tls/tls.crt
              subPath: ca.crt
      volumes:
        - name: config
          configMap:
            name: dex-k8s-authenticator
        - name: tls-key
          secret:
            secretName: dex-tls
        # - name: tls
        #   secret:
        #     secretName: dex-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-k8s-authenticator
  namespace: dex
  annotations:  
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  #   kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - login.k3s.lifoto.co
      secretName: cert-auth-login
  rules:
    - host: login.k3s.lifoto.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex-k8s-authenticator
                port:
                  number: 5555
